--- a/Geolocation/style.css
+++ b/Geolocation/style.css
@@ -1,3 +1,13 @@
+#coord{
+    height: 10%;
+    width: 100%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    font-family: sans-serif;
+    text-align: center;
+    font-size: 2.5rem;
+}
+
 #map {
   height: 90%;
   width: 100%;
